<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/header"
        layout="@layout/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dfu_name"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/ota"
        app:layout_constraintStart_toStartOf="@+id/guideline32"
        app:layout_constraintTop_toTopOf="@+id/ota" />

    <EditText
        android:id="@+id/ota"
        style="@style/ota_edit"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:hint="@string/hint_dfu"
        app:layout_constraintBottom_toTopOf="@+id/guideline30"
        app:layout_constraintEnd_toStartOf="@+id/guideline22"
        app:layout_constraintStart_toEndOf="@+id/textView10" />

    <Button
        android:id="@+id/upgrade"
        style="@style/ota_button"
        android:layout_marginTop="10dp"
        android:text="@string/upgrade"
        app:layout_constraintEnd_toStartOf="@+id/guideline22"
        app:layout_constraintStart_toStartOf="@+id/guideline25"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/module_ip"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/ip"
        app:layout_constraintStart_toStartOf="@+id/guideline32" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/module_version"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/ver"
        app:layout_constraintStart_toStartOf="@+id/guideline32" />

    <TextView
        android:id="@+id/ip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/guideline28"
        app:layout_constraintEnd_toStartOf="@+id/guideline22"
        app:layout_constraintStart_toEndOf="@+id/textView8" />

    <Button
        android:id="@+id/query_ip"
        style="@style/ota_button"
        android:layout_marginTop="10dp"
        android:text="@string/query_ip"
        app:layout_constraintEnd_toStartOf="@+id/guideline22"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline25"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <TextView
        android:id="@+id/ver"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/guideline29"
        app:layout_constraintEnd_toStartOf="@+id/guideline22"
        app:layout_constraintStart_toEndOf="@+id/textView9" />

    <Button
        android:id="@+id/query_ver"
        style="@style/ota_button"
        android:layout_marginTop="10dp"
        android:text="@string/query_version"
        app:layout_constraintEnd_toStartOf="@+id/guideline22"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline25"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <Button
        android:id="@+id/reset"
        style="@style/ota_button"
        android:text="@string/reset"
        app:layout_constraintBottom_toTopOf="@+id/guideline31"
        app:layout_constraintEnd_toStartOf="@+id/guideline22"
        app:layout_constraintStart_toStartOf="@+id/guideline25" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#000000"
        app:layout_constraintEnd_toStartOf="@+id/guideline33"
        app:layout_constraintStart_toStartOf="@+id/guideline32"
        app:layout_constraintTop_toTopOf="@+id/guideline30" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#000000"
        app:layout_constraintEnd_toStartOf="@+id/guideline33"
        app:layout_constraintStart_toStartOf="@+id/guideline32"
        app:layout_constraintTop_toTopOf="@+id/guideline28" />

    <View
        android:id="@+id/divider3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#000000"
        app:layout_constraintBottom_toTopOf="@+id/guideline29"
        app:layout_constraintEnd_toStartOf="@+id/guideline33"
        app:layout_constraintStart_toStartOf="@+id/guideline32" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />


</androidx.constraintlayout.widget.ConstraintLayout>